<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_marginTop="120dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person"
            android:alpha="0"
            />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/pleaselogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/Log_in_text"
            android:textColor="@color/black"
            android:textSize="16sp" />
        
    <com.example.storyapp.ui.custom_view.CustomEmail
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/bg_edit_text"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black_400"
        android:textSize="14sp"/>

    <com.example.storyapp.ui.custom_view.CustomPassword
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black_400"
        android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/seePassword"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/show_password"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="80dp"
            android:textSize="14sp"
            android:alpha="0"/>

    <com.example.storyapp.ui.custom_view.CustomButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:background="@drawable/bg_button"/>



    <TextView
        android:id="@+id/textRegister"
        style="@style/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>