<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add_story.AddStoryActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgPrev"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars"
                app:srcCompat="@drawable/baseline_image_24"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera"
            android:textStyle="bold"
            android:layout_margin="30dp"
            android:textAlignment="center"
            android:background="@drawable/bg_button"
            />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:layout_margin="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/bg_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/inputDesc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/description"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black_400"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck"
            android:autofillHints="Description" />

    </LinearLayout>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="@drawable/bg_button"/>

</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    tools:visibility="visible" />


</FrameLayout>